fix(layout1): fix width issues

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
 					</ul>
 				</nav>
 			</header>
-			<main class="content">
-				<section class="section_left">
+			<section class="content">
+				<div class="content_left">
+					<h1>Discover Our Latest  Products</h1>
+				</div>
+				<div class="content_right">
 					
-				</section>
-				<section class="section_right">
-					
-				</section>
-			</main>
+				</div>
+			</section>
 		</div>
 	</body>
 </html>
