feat(layout1): section completed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<span class="logo__text_color-main">Shop</span>per
 					</a>
 					<div class="header__aside">
-						<form class="search-form">
+						<form class="search-form" onsubmit="return false;">
 							<input
 								class="search-form__input"
 								type="text"
@@ -41,7 +41,8 @@
 							</button>
 						</form>
 						<button class="aside__button">
-							<img class="aside__button-icon"
+							<img
+								class="aside__button-icon"
 								src="./static/svg/cart.svg"
 								height="20"
 								width="16"
@@ -51,7 +52,8 @@
 							0 Items Added
 						</button>
 						<button class="aside__button aside__button_login">
-							<img class="aside__button-icon"
+							<img
+								class="aside__button-icon"
 								src="./static/svg/profile.svg"
 								height="20"
 								width="16"
@@ -73,10 +75,100 @@
 			</header>
 			<section class="content">
 				<div class="content_left">
-					<h1>Discover Our Latest  Products</h1>
+					<h1>Discover Our Latest Products</h1>
+					<p class="content__description">
+						Lorem ipsum is a placeholder text commonly used to
+						demonstrate the visual form of a product
+					</p>
+					<button class="buy-btn">Buy Now</button>
+					<div class="reviews">
+						<div class="reviews__icons">
+							<img
+								class="reviews__icons-img"
+								src="./static/img/reviews/1.png"
+								height="60"
+								width="60"
+								alt="avatar1"
+							/>
+							<img
+								class="reviews__icons-img"
+								src="./static/img/reviews/2.png"
+								height="60"
+								width="60"
+								alt="avatar2"
+							/>
+							<img
+								class="reviews__icons-img"
+								src="./static/img/reviews/3.png"
+								height="60"
+								width="60"
+								alt="avatar3"
+							/>
+							<img
+								class="reviews__icons-img"
+								src="./static/img/reviews/4.png"
+								height="60"
+								width="60"
+								alt="avatar4"
+							/>
+						</div>
+						<div class="reviews__count">15k Well<br />Reviews</div>
+					</div>
 				</div>
 				<div class="content_right">
-					
+					<div class="play-video">
+						<div class="play-video__wrapper">
+							<div class="play-video__icon">
+								<img
+									src="./static/img/man-listening.png"
+									height="70"
+									alt="man-listening"
+								/>
+							</div>
+						</div>
+						<a href="#">Play Video</a>
+					</div>
+					<div class="headphones">
+						<img
+							class="star-top"
+							src="./static/svg/star_yellow.svg"
+							height="53"
+							alt="star1"
+						/>
+						<img
+							class="star-bottom"
+							src="./static/svg/star_yellow.svg"
+							height="53"
+							alt="star1"
+						/>
+						<div class="headphones__picture">
+							<img
+								class="headphones__picture-img"
+								src="./static/img/phones.png"
+								height="299"
+								alt="headphones"
+							/>
+						</div>
+						<div class="headphones__text">
+							<span>R</span>
+							<span>e</span>
+							<span>d</span>
+							<span>B</span>
+							<span>e</span>
+							<span>a</span>
+							<span>t</span>
+							<span>s</span>
+							<span>M</span>
+							<span>l</span>
+							<span>9</span>
+							<span>c</span>
+							<span>2</span>
+							<span>z</span>
+							<span>m</span>
+							<span>/</span>
+							<span>a</span>
+						</div>
+					</div>
 				</div>
 			</section>
 		</div>
