feat(layout2): section completed

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 					</ul>
 				</nav>
 			</header>
-			<section class="content">
-				<div class="content_left">
+			<section class="content content-info">
+				<div class="content-info__side_left">
 					<h1>Discover Our Latest Products</h1>
 					<p class="content__description">
 						Lorem ipsum is a placeholder text commonly used to
 						demonstrate the visual form of a product
 					</p>
-					<button class="buy-btn">Buy Now</button>
+					<button class="button button_color-green buy-btn">Buy Now</button>
 					<div class="reviews">
 						<div class="reviews__icons">
 							<img
@@ -115,7 +115,7 @@
 						<div class="reviews__count">15k Well<br />Reviews</div>
 					</div>
 				</div>
-				<div class="content_right">
+				<div class="content-info__side_right">
 					<div class="play-video">
 						<div class="play-video__wrapper">
 							<div class="play-video__icon">
@@ -168,6 +168,56 @@
 							<span>/</span>
 							<span>a</span>
 						</div>
+					</div>
+				</div>
+			</section>
+			<section class="content content-products">
+				<div class="content-products_left ontop">
+					<h2 class="content-products_left__h2">
+						Apple wireless Airpod
+					</h2>
+					<div class="products">
+						<div class="products__photos">
+							<img
+								class="products__photos-img"
+								src="./static/img/earphones/1.png"
+								height="331"
+								alt="earphones1"
+							/>
+							<img
+								class="products__photos-img"
+								src="./static/img/earphones/2.png"
+								height="331"
+								alt="earphones2"
+							/>
+							<img
+								class="products__photos-img"
+								src="./static/img/earphones/3.png"
+								height="331"
+								alt="earphones3"
+							/>
+						</div>
+						<div class="products__price">
+							Price : &nbsp;
+							<span class="products__price_bold">$ 45.99</span>
+						</div>
+					</div>
+				</div>
+				<div class="content-products_right ontop">
+					<h2 class="content-products_right__h2">
+						Our Featured Products
+					</h2>
+					<p class="content-products_right__text">
+						Lorem ipsum is a placeholder text commonly used to
+						demonstrate the visual form of a product
+					</p>
+					<div class="products-actions">
+						<button class="button button_color-green cart-btn">
+							Add to cart
+						</button>
+						<a class="products-actions__view-link" href="#">
+							View more
+						</a>
 					</div>
 				</div>
 			</section>
