feat(layout3): section started

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<header class="header">
 				<div class="header_section">
 					<a class="logo" href="#">
-						<span class="logo__text_color-main">Shop</span>per
+						<span class="logo__text_color_main">Shop</span>per
 					</a>
 					<div class="header__aside">
 						<form class="search-form" onsubmit="return false;">
@@ -80,7 +80,7 @@
 						Lorem ipsum is a placeholder text commonly used to
 						demonstrate the visual form of a product
 					</p>
-					<button class="button button_color-green buy-btn">Buy Now</button>
+					<button class="button button_color_green buy-btn">Buy Now</button>
 					<div class="reviews">
 						<div class="reviews__icons">
 							<img
@@ -212,13 +212,23 @@
 						demonstrate the visual form of a product
 					</p>
 					<div class="products-actions">
-						<button class="button button_color-green cart-btn">
+						<button class="button button_color_green cart-btn">
 							Add to cart
 						</button>
 						<a class="products-actions__view-link" href="#">
 							View more
 						</a>
 					</div>
+				</div>
+			</section>
+			<section class="content content-sellers">
+				<h3>Top Sellers</h3>
+				<div class="tabs__wrapper content-sellers__tabs">
+					<button class="tab tab_active ontop">Top Picks</button>
+					<button class="tab ontop">Watches</button>
+				</div>
+				<div class="sellers-tabs_content">
+					<!-- cards -->
 				</div>
 			</section>
 		</div>
