--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
 						Lorem ipsum is a placeholder text commonly used to
 						demonstrate the visual form of a product
 					</p>
-					<button class="button button_color_green buy-btn">Buy Now</button>
+					<button class="button button_color_green buy-btn">
+						Buy Now
+					</button>
 					<div class="reviews">
 						<div class="reviews__icons">
 							<img
@@ -228,7 +230,161 @@
 					<button class="tab ontop">Watches</button>
 				</div>
 				<div class="sellers-tabs_content">
-					<!-- cards -->
+					<div class="card-wrapper">
+						<div class="card card_color_mint-cream">
+							<img
+								class="card__photo-img"
+								src="./static/img/sellers/1.png"
+								height="200"
+								alt="earphones1"
+							/>
+							<div class="card__info">
+								<div class="card__info-title">
+									Boat Rockerz 333
+								</div>
+								<div class="card__info-rating">
+									<div class="rating__stars">
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+									</div>
+									<div class="rating__reviews">
+										75 Reviews
+									</div>
+								</div>
+								<div class="card__info-price">$20</div>
+							</div>
+							<div class="card__discount card__discount_color_primary">Save 60<br />%</div>
+						</div>
+						<button class="button button_color_green card-btn">
+							Add to cart
+						</button>
+					</div>
+					<div class="card-wrapper">
+						<div class="card card_color_light-cyan">
+							<img
+								class="card__photo-img"
+								src="./static/img/sellers/1.png"
+								height="200"
+								alt="earphones1"
+							/>
+							<div class="card__info">
+								<div class="card__info-title">
+									Boat kerz 234
+								</div>
+								<div class="card__info-rating">
+									<div class="rating__stars">
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+									</div>
+									<div class="rating__reviews">
+										75 Reviews
+									</div>
+								</div>
+								<div class="card__info-price">$40</div>
+							</div>
+						</div>
+						<button class="button button_color_green card-btn">
+							Add to cart
+						</button>
+					</div>
+					<div class="card-wrapper">
+						<div class="card card_color_light-mallow">
+							<img
+								class="card__photo-img"
+								src="./static/img/sellers/1.png"
+								height="200"
+								alt="earphones1"
+							/>
+							<div class="card__info">
+								<div class="card__info-title">
+									Boat Rockerz 323
+								</div>
+								<div class="card__info-rating">
+									<div class="rating__stars">
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+									</div>
+									<div class="rating__reviews">
+										75 Reviews
+									</div>
+								</div>
+								<div class="card__info-price">$30</div>
+							</div>
+							<div class="card__discount card__discount_color_primary">Save 40<br />%</div>
+						</div>
+						<button class="button button_color_green card-btn">
+							Add to cart
+						</button>
+					</div>
 				</div>
 			</section>
 		</div>
