feat(layout4): section started

--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
 			</section>
 			<section class="content content-sellers">
 				<h3>Top Sellers</h3>
-				<div class="tabs__wrapper content-sellers__tabs">
-					<button class="tab tab_active ontop">Top Picks</button>
+				<div class="tabs content__tabs">
+					<button class="tab tab_active ontop" disabled>Top Picks</button>
 					<button class="tab ontop">Watches</button>
 				</div>
-				<div class="sellers-tabs_content">
+				<div class="tabs-content">
 					<div class="card-wrapper">
 						<div class="card card_color_mint-cream">
 							<img
@@ -286,7 +286,7 @@
 						<div class="card card_color_light-cyan">
 							<img
 								class="card__photo-img"
-								src="./static/img/sellers/1.png"
+								src="./static/img/sellers/2.png"
 								height="200"
 								alt="earphones1"
 							/>
@@ -337,7 +337,172 @@
 						<div class="card card_color_light-mallow">
 							<img
 								class="card__photo-img"
+								src="./static/img/sellers/3.png"
+								height="200"
+								alt="earphones1"
+							/>
+							<div class="card__info">
+								<div class="card__info-title">
+									Boat Rockerz 323
+								</div>
+								<div class="card__info-rating">
+									<div class="rating__stars">
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+									</div>
+									<div class="rating__reviews">
+										75 Reviews
+									</div>
+								</div>
+								<div class="card__info-price">$30</div>
+							</div>
+							<div class="card__discount card__discount_color_primary">Save 40<br />%</div>
+						</div>
+						<button class="button button_color_green card-btn">
+							Add to cart
+						</button>
+					</div>
+				</div>
+			</section>
+			<section class="content content-trending">
+				<h3>Trending Earphones</h3>
+				<div class="tabs content__tabs">
+					<button class="tab tab_active ontop" disabled>Earbuds</button>
+					<button class="tab ontop">Wireless</button>
+					<button class="tab ontop">Wired</button>
+				</div>
+				<div class="tabs-content">
+					<div class="card-wrapper">
+						<div class="card card_color_mint-cream">
+							<img
+								class="card__photo-img"
 								src="./static/img/sellers/1.png"
+								height="200"
+								alt="earphones1"
+							/>
+							<div class="card__info">
+								<div class="card__info-title">
+									Boat Rockerz 333
+								</div>
+								<div class="card__info-rating">
+									<div class="rating__stars">
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+									</div>
+									<div class="rating__reviews">
+										75 Reviews
+									</div>
+								</div>
+								<div class="card__info-price">$20</div>
+							</div>
+							<div class="card__discount card__discount_color_primary">Save 60<br />%</div>
+						</div>
+						<button class="button button_color_green card-btn">
+							Add to cart
+						</button>
+					</div>
+					<div class="card-wrapper">
+						<div class="card card_color_light-cyan">
+							<img
+								class="card__photo-img"
+								src="./static/img/sellers/2.png"
+								height="200"
+								alt="earphones1"
+							/>
+							<div class="card__info">
+								<div class="card__info-title">
+									Boat kerz 234
+								</div>
+								<div class="card__info-rating">
+									<div class="rating__stars">
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+										<img
+											src="./static/svg/star_rating.svg"
+											draggable="false"
+											alt="star"
+										/>
+									</div>
+									<div class="rating__reviews">
+										75 Reviews
+									</div>
+								</div>
+								<div class="card__info-price">$40</div>
+							</div>
+						</div>
+						<button class="button button_color_green card-btn">
+							Add to cart
+						</button>
+					</div>
+					<div class="card-wrapper">
+						<div class="card card_color_light-mallow">
+							<img
+								class="card__photo-img"
+								src="./static/img/sellers/3.png"
 								height="200"
 								alt="earphones1"
 							/>
