feat(layout3): section completed

--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
 			</section>
 			<section class="content content-sellers">
 				<h3>Top Sellers</h3>
-				<div class="tabs__wrapper content-sellers__tabs">
-					<button class="tab tab_active ontop">Top Picks</button>
+				<div class="tabs content-sellers__tabs">
+					<button class="tab tab_active ontop" disabled>Top Picks</button>
 					<button class="tab ontop">Watches</button>
 				</div>
-				<div class="sellers-tabs_content">
+				<div class="tabs-content">
 					<div class="card-wrapper">
 						<div class="card card_color_mint-cream">
 							<img
