feat(layout4): section completed

--- a/index.html
+++ b/index.html
@@ -396,10 +396,10 @@
 				</div>
 				<div class="tabs-content">
 					<div class="card-wrapper">
-						<div class="card card_color_mint-cream">
+						<div class="card card_color_dark-blue-alice">
 							<img
 								class="card__photo-img"
-								src="./static/img/sellers/1.png"
+								src="./static/img/trending/1.png"
 								height="200"
 								alt="earphones1"
 							/>
@@ -448,10 +448,10 @@
 						</button>
 					</div>
 					<div class="card-wrapper">
-						<div class="card card_color_light-cyan">
+						<div class="card card_color_light-blue-alice">
 							<img
 								class="card__photo-img"
-								src="./static/img/sellers/2.png"
+								src="./static/img/trending/2.png"
 								height="200"
 								alt="earphones1"
 							/>
@@ -499,10 +499,10 @@
 						</button>
 					</div>
 					<div class="card-wrapper">
-						<div class="card card_color_light-mallow">
+						<div class="card card_color_paleturquoise">
 							<img
 								class="card__photo-img"
-								src="./static/img/sellers/3.png"
+								src="./static/img/trending/3.png"
 								height="200"
 								alt="earphones1"
 							/>
