feat(page): mobile nav animation completed

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 					</ul>
 				</nav>
 			</header>
-			<section class="nav_mobile">
+			<section class="nav_mobile animate-fadein-css">
 				<div class="nav_mobile__shadow"></div>
-				<div class="nav_mobile__menu">
+				<div class="nav_mobile__menu animate-slidein-css">
 					<div class="nav_mobile__menu-btn">
 						<button class="mobile-nav-btn_close">
 							<img
@@ -104,7 +104,7 @@
 						<input
 							class="search-form__input"
 							type="text"
-							size="18"
+							size="28"
 							placeholder="Search Items"
 						/>
 						<button class="search-form__button">
