feat(page): mobile responsive 1440px and 768px completed

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
 					</div>
 					<button class="mobile-nav-btn_open">
 						<img
-							class="mobile-nav-btn_open__img"
 							src="./static/svg/burger-menu.svg"
 							height="38"
 							width="38"
@@ -91,7 +90,6 @@
 					<div class="nav_mobile__menu-btn">
 						<button class="mobile-nav-btn_close">
 							<img
-								class="mobile-nav-btn_close__img"
 								src="./static/svg/close.svg"
 								height="52"
 								width="52"
@@ -100,9 +98,9 @@
 							/>
 						</button>
 					</div>
-					<form class="search-form" onsubmit="return false;">
+					<form class="search-form search-form_mobile" onsubmit="return false;">
 						<input
-							class="search-form__input"
+							class="search-form__input search-form__input_mobile"
 							type="text"
 							size="28"
 							placeholder="Search Items"
@@ -117,6 +115,12 @@
 							/>
 						</button>
 					</form>
+					<ul class="nav__list nav_mobile__list">
+						<li class="nav__link nav_mobile__link"><a href="#">Features</a></li>
+						<li class="nav__link nav_mobile__link"><a href="#">Products</a></li>
+						<li class="nav__link nav_mobile__link"><a href="#">Blog</a></li>
+						<li class="nav__link nav_mobile__link"><a href="#">About</a></li>
+					</ul>
 				</div>
 			</section>
 			<section class="content content-info">
