feat(page): mobile responsive completed

--- a/index.html
+++ b/index.html
@@ -87,18 +87,19 @@
 			<section class="nav_mobile animate-fadein-css">
 				<div class="nav_mobile__shadow"></div>
 				<div class="nav_mobile__menu animate-slidein-css">
-					<div class="nav_mobile__menu-btn">
-						<button class="mobile-nav-btn_close">
-							<img
-								src="./static/svg/close.svg"
-								height="52"
-								width="52"
-								draggable="false"
-								alt="close menu"
-							/>
-						</button>
-					</div>
-					<form class="search-form search-form_mobile" onsubmit="return false;">
+					<button class="mobile-nav-btn_close">
+						<img
+							src="./static/svg/close.svg"
+							height="52"
+							width="52"
+							draggable="false"
+							alt="close menu"
+						/>
+					</button>
+					<form
+						class="search-form search-form_mobile"
+						onsubmit="return false;"
+					>
 						<input
 							class="search-form__input search-form__input_mobile"
 							type="text"
@@ -116,16 +117,24 @@
 						</button>
 					</form>
 					<ul class="nav__list nav_mobile__list">
-						<li class="nav__link nav_mobile__link"><a href="#">Features</a></li>
-						<li class="nav__link nav_mobile__link"><a href="#">Products</a></li>
-						<li class="nav__link nav_mobile__link"><a href="#">Blog</a></li>
-						<li class="nav__link nav_mobile__link"><a href="#">About</a></li>
+						<li class="nav__link nav_mobile__link">
+							<a href="#">Features</a>
+						</li>
+						<li class="nav__link nav_mobile__link">
+							<a href="#">Products</a>
+						</li>
+						<li class="nav__link nav_mobile__link">
+							<a href="#">Blog</a>
+						</li>
+						<li class="nav__link nav_mobile__link">
+							<a href="#">About</a>
+						</li>
 					</ul>
 				</div>
 			</section>
 			<section class="content content-info">
 				<div class="content-info__side_left">
-					<h1>Discover Our Latest Products</h1>
+					<h1 class="content__h1">Discover Our Latest Products</h1>
 					<p class="content__description">
 						Lorem ipsum is a placeholder text commonly used to
 						demonstrate the visual form of a product
@@ -274,7 +283,7 @@
 				</div>
 			</section>
 			<section class="content content-sellers">
-				<h3>Top Sellers</h3>
+				<h3 class="content__h3">Top Sellers</h3>
 				<div class="tabs content__tabs">
 					<button class="tab tab_active ontop" disabled>
 						Top Picks
@@ -469,7 +478,7 @@
 				</div>
 			</section>
 			<section class="content content-trending">
-				<h3>Trending Earphones</h3>
+				<h3 class="content__h3">Trending Earphones</h3>
 				<div class="tabs content__tabs">
 					<button class="tab tab_active ontop" disabled>
 						Earbuds
