feat(layout5): section completed

--- a/index.html
+++ b/index.html
@@ -673,6 +673,50 @@
 					</button>
 				</div>
 			</section>
+			<h3 class="content__h3 content-launches__h3">New Launches</h3>
+			<section class="content content-launches">
+				<div class="content-products_left ontop">
+					<div class="launches__photos">
+						<img
+							class="launches__photos-img"
+							src="./static/img/launches/1.png"
+							height="423"
+							alt="earphones3"
+						/>
+						<img
+							class="launches__photos-img"
+							src="./static/img/launches/2.png"
+							height="423"
+							alt="earphones4"
+						/>
+					</div>
+				</div>
+				<div class="content-products_right ontop">
+					<h2 class="content-launches_right__h2">Airdrop 500 Anc</h2>
+					<p class="content-launches_right__text">
+						Lorem ipsum is a placeholder text commonly used to
+						demonstrate the visual form of a product...
+						<a href="#">Read more</a>
+					</p>
+					<div class="launches__price">
+						Price : &nbsp;
+						<span class="products__price_bold">$ 45.99</span>
+					</div>
+					<div class="launches__colors">
+						<div class="color colors__black"></div>
+						<div class="color colors__yellow"></div>
+						<div class="color colors__blue"></div>
+					</div>
+					<div class="launches-actions">
+						<button class="button button_color_green cart-btn">
+							Add to cart
+						</button>
+						<a class="products-actions__view-link" href="#">
+							View more
+						</a>
+					</div>
+				</div>
+			</section>
 		</div>
 	</body>
 </html>
